####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libcmn.a

INCLUDES = $(all_includes)

libcmn_a_METASOURCES = AUTO

libcmn_a_SOURCES = BDTree.cpp BDString.cpp BDParser.cpp BDMemFile.cpp BDFile.cpp BDErrorList.cpp BDDiskFile.cpp 


EXTRA_DIST = BDDiskFile.cpp BDDiskFile.h BDErrorList.cpp BDErrorList.h BDFile.cpp BDFile.h BDMemFile.cpp BDMemFile.h BDParser.cpp BDParser.h BDString.cpp BDString.h BDTree.cpp BDTree.h BDTypes.h 

####### kdevelop will overwrite this part!!! (end)############
