####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libhtml.a

INCLUDES = $(all_includes)

libhtml_a_METASOURCES = AUTO

libhtml_a_SOURCES = pTextStyle.cpp pTextMarkup.cpp pTables.cpp pObject.cpp pLists.cpp pLinks.cpp pImages.cpp phState.cpp phHTML.cpp pHead.cpp pFrames.cpp pForms.cpp pEntTypes.cpp pEntities.cpp pElements.cpp pDTD.cpp pDocument.cpp pCData.cpp pAttrTables.cpp pAttrLists.cpp pAttributes.cpp pAttrFrames.cpp pAttrForms.cpp pAttrColor.cpp 


EXTRA_DIST = pAttrColor.cpp pAttrForms.cpp pAttrForms.h pAttrFrames.cpp pAttrFrames.h pAttributes.cpp pAttributes.h pAttrLists.cpp pAttrLists.h pAttrTables.cpp pAttrTables.h pCData.cpp pCData.h pCommon.h pDocument.cpp pDocument.h pDTD.cpp pDTD.h pElements.cpp pElements.h pEntities.cpp pEntities.h pEntTypes.cpp pEntTypes.h pErrorList.h pForms.cpp pForms.h pFrames.cpp pFrames.h pHead.cpp pHead.h phHTML.cpp phHTML.h phState.cpp phState.h pHTMLAll.h pImages.cpp pImages.h pLinks.cpp pLinks.h pLists.cpp pLists.h pObject.cpp pObject.h pTables.cpp pTables.h pTextMarkup.cpp pTextMarkup.h pTextStyle.cpp pTextStyle.h 

####### kdevelop will overwrite this part!!! (end)############
