####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libpc.a

INCLUDES = $(all_includes)

libpc_a_METASOURCES = AUTO

libpc_a_SOURCES = pmMarkup.cpp pmAttrHelpers.cpp 


EXTRA_DIST = pJavaScript.h pmAttrHelpers.cpp pmAttrHelpers.h pmMarkup.cpp pmMarkup.h 

####### kdevelop will overwrite this part!!! (end)############
